classDiagram

namespace gestion_autorisations{
  class Action {
    id: int
    nom: string
  }

  class Autorisation {
    id: int
  }

  class Controller {
    id: int
    nom: string
  }
}
namespace Spatie {
  class Permission {
    id: int
    name: string
    guard_name: string
  }
}


namespace gestion_authentifications {

class Role{
    + id : int
    + name: string 
    + description: text 
}
}


Action "*" <-- "1" Controller
Autorisation --> "1" Action
Autorisation "*" <-- "1" Role
Action "1" --> "1" Permission
Action  "1" --> "*" Action : "actions permises avec lui"